<resources>
    <string name="app_name">Business Chat App</string>

    <!-- Don't use one string for different screen -->
    <!-- screen_type_name -->

    <!-- Login screen start -->
    <string name="chat">Chat</string>
    <string name="login_title">Login</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_error_email_invalid">This email address is invalid</string>
    <string name="login_error_email_not_exist">User with this email address isn\'t exist</string>
    <string name="login_error_authorization">Authentication failed</string>
    <string name="login_error_wrong_password">This password is wrong</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_action_signin">Sign In</string>
    <string name="login_action_register">Register</string>
    <!-- Login screen end -->

    <!-- Registration screen start -->
    <string name="registration_title">Registration</string>
    <string name="registration_error_field_required">This field is required</string>
    <string name="registration_error_email_invalid">This email address is invalid</string>
    <string name="registration_error_password_too_short">This password is too short, minimum length is %d characters</string>
    <string name="registration_error_passwords_not_same">This passwords aren\'t same</string>
    <string name="registration_error_username_too_short">This username is too short, minimum length is %d characters</string>
    <string name="registration_error">Registration error</string>
    <string name="registration_error_email_exist">The email address is already in use by another account</string>
    <string name="registration_hint_email">Email</string>
    <string name="registration_hint_password">Password</string>
    <string name="registration_hint_confirm_password">Confirm Password</string>
    <string name="registration_hint_username">Username</string>
    <string name="registration_action_register">Register</string>
    <string name="registration_cancel">Cancel</string>
    <!-- Registration screen end -->

    <!-- Profile screen start -->
    <string name="profile_title">Profile</string>
    <string name="profile_hint_username">Username</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_error_field_required">This field is required</string>
    <string name="profile_error_email_invalid">This email address is invalid</string>
    <string name="profile_error_email_exist">The email address is already in use by another account</string>
    <string name="profile_error_get_user_info">Error getting user</string>
    <string name="profile_error_update">Error updating user</string>
    <string name="profile_success_update">User updated</string>
    <string name="profile_error_wrong_password">Password is wrong</string>
    <string name="profile_error_password_required">Please enter your password</string>
    <string name="profile_hint_password">Password</string>
    <string name="profile_title_enter_password">Enter your password:</string>
    <string name="profile_ok">Ok</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_title_change_password">Change password</string>
    <string name="profile_hint_old_password">Current password</string>
    <string name="profile_hint_new_password">New password</string>
    <string name="profile_hint_new_confirm_password">New password, again</string>
    <string name="profile_error_username_too_short">This username is too short, minimum length is %d characters</string>
    <string name="profile_error_password_too_short">This password is too short, minimum length is %d characters</string>
    <string name="profile_error_all_fields_required">All fields required</string>
    <string name="profile_error_passwords_not_same">This passwords aren\'t same</string>
    <string name="profile_change_password">Change password</string>
    <!-- Profile screen end -->

    <!-- Strings need to relocate to specific screen -->
    <!-- Don't touch string with name: _strings_needs_to_relocate_to_specific_screen -->
    <string name="_strings_needs_to_relocate_to_specific_screen" />


    <string name="title_activity_chats">Chats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="chat_info_title">Chat members</string>
    <string name="new_group_chat_title">New Group Chat</string>
    <string name="new_chat">New Chat</string>
    <string name="multimedia_type_photo">photo</string>
    <string name="messages_date_format_type">hh:mm a, MMM dd</string>
    <string name="add_contacts_title">Add Contacts</string>
    <string name="my_contacts_title">My Contacts</string>


</resources>
