<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/message"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutTheme"
                app:hintTextAppearance="@style/InputLayoutHintTextAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/InputFieldsStyle"
                    android:hint="@string/login_hint_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutTheme"
                app:hintTextAppearance="@style/InputLayoutHintTextAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/InputFieldsStyle"
                    android:inputType="textPassword"
                    android:hint="@string/login_hint_password" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_action_signin"
                android:theme="@style/MainButtonTheme" />

            <Button
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_action_register"
                android:theme="@style/MainButtonTheme" />

        </LinearLayout>

    </ScrollView>
    </LinearLayout>
</layout>