<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/tv_placeholder_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_circular_white"
        android:layout_margin="2dp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="25sp"
        tools:text="TS"
        android:onClick="onAvatarClicked"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:cardCornerRadius="30dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/ic_google"
            android:onClick="onAvatarClicked"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
